[ADD]: ajout d'image et vidéo dans la gallerie

--- a/index.html
+++ b/index.html
@@ -137,31 +137,31 @@
                             <pre class="terminal-text" data-i18n="timeline-command">$ cat timeline.txt</pre>
                             <div class="timeline-wrapper">
                                 <div class="timeline-container" id="timeline-container-fr">
-                                    <div class="timeline-item" data-year="2008" data-title="Premiers pas en game design" data-desc="FPS Creator, RPG Maker" data-tech="FPS Creator, RPG Maker">
+                                    <div class="timeline-item" data-year="2008" data-title="Premiers pas en game design" data-desc="Découverte précoce du game design et du level design à l'aide d'outils accessibles de création de jeux vidéo. Premières expérimentations autour de la conception de niveaux et des mécaniques de jeu." data-tech="FPS Creator, RPG Maker">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2008</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2015" data-title="Premiers pas en programmation" data-desc="HTML, CSS, GameMaker, Construct 2, Java (mods Minecraft)" data-tech="HTML, CSS, Construct 2, Java">
+                                    <div class="timeline-item" data-year="2015" data-title="Découverte de la programmation" data-desc="Premiers pas en programmation avec le modding Minecraft en Java et le développement web (HTML, CSS). Sortie des outils clé en main pour commencer à coder des systèmes de jeu basiques : déplacements, interactions, combat, points de vie et score." data-tech="GameMaker, Construct 2, Java, HTML, CSS">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2015</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2016-2017" data-title="Premiers jeux sans moteur complet" data-desc="SFML, Phaser — prototype de roguelike (Rebirth)" data-tech="SFML, Phaser, C++, SDL, CSFML, C">
+                                    <div class="timeline-item" data-year="2016-2017" data-title="Premiers jeux sans moteur complet" data-desc="[TODO] SFML, Phaser — prototype de roguelike (Rebirth)" data-tech="SFML, Phaser, C++, SDL, CSFML, C">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2016-2017</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2018-2021" data-title="Apprentissage et montée en compétence sur Unity" data-desc="Génération procédurale (terrains, biomes, mondes), prototypes Unity, Devastation in Eden, VFX et effets visuels" data-tech="Unity, C#">
+                                    <div class="timeline-item" data-year="2018-2021" data-title="Apprentissage et montée en compétence sur Unity" data-desc="[TODO] Génération procédurale (terrains, biomes, mondes), prototypes Unity, Devastation in Eden, VFX et effets visuels" data-tech="Unity, C#">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2018-2021</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2022-2023" data-title="Professionnalisation sur Unity (cadre professionnel)" data-desc="Simulation sous Unity pour Airbus (Sopra Steria), conception d'outils, design patterns avancés, architecture complexe" data-tech="Unity, C#">
+                                    <div class="timeline-item" data-year="2022-2023" data-title="Professionnalisation sur Unity (cadre professionnel)" data-desc="[TODO] Simulation sous Unity pour Airbus (Sopra Steria), conception d'outils, design patterns avancés, architecture complexe" data-tech="Unity, C#">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2022-2023</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2023-2024" data-title="Prototypes sur temps libre (multi-engines)" data-desc="Prototypes de génération procédurale 2D/3D sous Unity, exploration de Godot et GameMaker" data-tech="Unity, Godot, GameMaker, C#">
+                                    <div class="timeline-item" data-year="2023-2024" data-title="Prototypes sur temps libre (multi-engines)" data-desc="[TODO] Prototypes de génération procédurale 2D/3D sous Unity, exploration de Godot et GameMaker" data-tech="Unity, Godot, GameMaker, C#">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2023-2024</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2025-2026" data-title="Développement de moteur maison" data-desc="Moteur maison : MonoGame puis C# pur" data-tech="MonoGame, C#">
+                                    <div class="timeline-item" data-year="2025-2026" data-title="Développement de moteur maison" data-desc="[TODO] Moteur maison : MonoGame puis C# pur" data-tech="MonoGame, C#">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2025-2026</div>
                                     </div>
@@ -176,7 +176,7 @@
                                             <div class="timeline-media" id="details-media-fr">
                                                 <div class="gallery-container">
                                                     <div class="gallery-main">
-                                                        <img id="gallery-main-img-fr" src="" alt="" style="display: none;">
+                                                        <div id="gallery-main-media-fr" class="gallery-main-media" style="display: none;"></div>
                                                         <div class="gallery-placeholder" id="gallery-placeholder-fr" aria-hidden="true">
                                                             <span class="gallery-placeholder-icon" aria-hidden="true"></span>
                                                             <span class="gallery-placeholder-text">Aucune image</span>
@@ -189,31 +189,31 @@
                                     </div>
                                 </div>
                                 <div class="timeline-container" id="timeline-container-en" style="display: none;">
-                                    <div class="timeline-item" data-year="2008" data-title="First steps in game design" data-desc="FPS Creator, RPG Maker" data-tech="FPS Creator, RPG Maker">
+                                    <div class="timeline-item" data-year="2008" data-title="First steps in game design" data-desc="Early discovery of game design and level design using accessible game creation tools. First experiments with level design and game mechanics." data-tech="FPS Creator, RPG Maker">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2008</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2015" data-title="First steps in programming" data-desc="HTML, CSS, GameMaker, Construct 2, Java (Minecraft mods)" data-tech="HTML, CSS, Construct 2, Java">
+                                    <div class="timeline-item" data-year="2015" data-title="Discovery of programming" data-desc="First steps in programming with Minecraft modding in Java and web development (HTML, CSS). Moving beyond ready-made tools to start coding basic game systems: movement, interactions, combat, health points and score." data-tech="GameMaker, Construct 2, Java, HTML, CSS">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2015</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2016-2017" data-title="First games without full engine" data-desc="SFML, Phaser — roguelike prototype (Rebirth)" data-tech="SFML, Phaser, C++, SDL, CSFML, C">
+                                    <div class="timeline-item" data-year="2016-2017" data-title="First games without full engine" data-desc="[TODO] SFML, Phaser — roguelike prototype (Rebirth)" data-tech="SFML, Phaser, C++, SDL, CSFML, C">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2016-2017</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2018-2021" data-title="Learning and skill development on Unity" data-desc="Procedural generation (terrains, biomes, worlds), Unity prototypes, Devastation in Eden, VFX and visual effects" data-tech="Unity, C#">
+                                    <div class="timeline-item" data-year="2018-2021" data-title="Learning and skill development on Unity" data-desc="[TODO] Procedural generation (terrains, biomes, worlds), Unity prototypes, Devastation in Eden, VFX and visual effects" data-tech="Unity, C#">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2018-2021</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2022-2023" data-title="Professionalization on Unity (professional context)" data-desc="Unity simulation for Airbus (Sopra Steria), tool design, advanced design patterns, complex architecture" data-tech="Unity, C#">
+                                    <div class="timeline-item" data-year="2022-2023" data-title="Professionalization on Unity (professional context)" data-desc="[TODO] Unity simulation for Airbus (Sopra Steria), tool design, advanced design patterns, complex architecture" data-tech="Unity, C#">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2022-2023</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2023-2024" data-title="Prototypes in free time (multi-engines)" data-desc="2D/3D procedural generation prototypes on Unity, exploration of Godot and GameMaker" data-tech="Unity, Godot, GameMaker, C#">
+                                    <div class="timeline-item" data-year="2023-2024" data-title="Prototypes in free time (multi-engines)" data-desc="[TODO] 2D/3D procedural generation prototypes on Unity, exploration of Godot and GameMaker" data-tech="Unity, Godot, GameMaker, C#">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2023-2024</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2025-2026" data-title="Home engine development" data-desc="Home engine: MonoGame then pure C#" data-tech="MonoGame, C#">
+                                    <div class="timeline-item" data-year="2025-2026" data-title="Home engine development" data-desc="[TODO] Home engine: MonoGame then pure C#" data-tech="MonoGame, C#">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2025-2026</div>
                                     </div>
@@ -228,7 +228,7 @@
                                             <div class="timeline-media" id="details-media-en">
                                                 <div class="gallery-container">
                                                     <div class="gallery-main">
-                                                        <img id="gallery-main-img-en" src="" alt="" style="display: none;">
+                                                        <div id="gallery-main-media-en" class="gallery-main-media" style="display: none;"></div>
                                                         <div class="gallery-placeholder" id="gallery-placeholder-en" aria-hidden="true">
                                                             <span class="gallery-placeholder-icon" aria-hidden="true"></span>
                                                             <span class="gallery-placeholder-text">No images</span>
