--- a/index.html
+++ b/index.html
@@ -137,31 +137,31 @@
                             <pre class="terminal-text" data-i18n="timeline-command">$ cat timeline.txt</pre>
                             <div class="timeline-wrapper">
                                 <div class="timeline-container" id="timeline-container-fr">
-                                    <div class="timeline-item" data-year="2008" data-title="Premiers pas en game design" data-desc="Découverte précoce du game design et du level design à l'aide d'outils accessibles de création de jeux vidéo. Premières expérimentations autour de la conception de niveaux et des mécaniques de jeu." data-tech="FPS Creator, RPG Maker">
+                                    <div class="timeline-item" data-year="2008" data-title="Découverte de la création de jeux" data-desc="Découverte précoce du game design et du level design à l'aide d'outils accessibles de création de jeux vidéo. Premières expérimentations autour de la conception de niveaux et des mécaniques de jeu." data-tech="FPS Creator, RPG Maker">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2008</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2015" data-title="Découverte de la programmation" data-desc="Premiers pas en programmation avec le modding Minecraft en Java et le développement web (HTML, CSS). Sortie des outils clé en main pour commencer à coder des systèmes de jeu basiques : déplacements, interactions, combat, points de vie et score." data-tech="GameMaker, Construct 2, Java, HTML, CSS">
+                                    <div class="timeline-item" data-year="2015" data-title="Premiers pas en programmation" data-desc="Premiers pas en programmation avec le modding Minecraft en Java et le développement web (HTML, CSS). Sortie des outils clé en main pour commencer à coder des systèmes de jeu basiques : déplacements, interactions, combat, points de vie et score." data-tech="GameMaker, Construct 2, Java, HTML, CSS">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2015</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2016-2017" data-title="Premiers jeux sans moteur complet" data-desc="[TODO] SFML, Phaser — prototype de roguelike (Rebirth)" data-tech="SFML, Phaser, C++, SDL, CSFML, C">
+                                    <div class="timeline-item" data-year="2016-2017" data-title="Développement de jeux sans moteur" data-desc="Premiers développements de jeux complets en C (CSFML), C++ (Irrlicht) et JavaScript (Phaser). Génération procédurale avec le projet Rebirth (inspiré de The Binding of Isaac) et premières implémentations de gestion de mondes 2D par chunks." data-tech="SFML, Phaser, C++, SDL, CSFML, C, Irrlicht">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2016-2017</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2018-2021" data-title="Apprentissage et montée en compétence sur Unity" data-desc="[TODO] Génération procédurale (terrains, biomes, mondes), prototypes Unity, Devastation in Eden, VFX et effets visuels" data-tech="Unity, C#">
+                                    <div class="timeline-item" data-year="2018-2021" data-title="Apprentissage et maîtrise d'Unity" data-desc="Apprentissage d'Unity à travers des prototypes axés sur la génération procédurale (bruit de Perlin, Voronoï), la création de mondes et de planètes à grande échelle, ainsi que la génération et le placement de biomes.<br><br>Maîtrise d'Unity à travers le développement de jeux complets en équipe, lors de game jams et au sein du studio Muddy Crab. Spécialisation en scripting C#, VFX, post-processing et level design." data-tech="Unity, C#">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2018-2021</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2022-2023" data-title="Professionnalisation sur Unity (cadre professionnel)" data-desc="[TODO] Simulation sous Unity pour Airbus (Sopra Steria), conception d'outils, design patterns avancés, architecture complexe" data-tech="Unity, C#">
+                                    <div class="timeline-item" data-year="2022-2023" data-title="Professionnalisation avec Unity" data-desc="Développement en équipe d'un simulateur 3D pour Airbus, axé sur la simulation des MFD et du KCCU de l'A350. Mission Unity en contexte professionnel, orientée architecture logicielle, design patterns avancés et structuration de projets complexes, avec mentorat par un ingénieur de l'écosystème Unity." data-tech="Unity, C#">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2022-2023</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2023-2024" data-title="Prototypes sur temps libre (multi-engines)" data-desc="[TODO] Prototypes de génération procédurale 2D/3D sous Unity, exploration de Godot et GameMaker" data-tech="Unity, Godot, GameMaker, C#">
+                                    <div class="timeline-item" data-year="2023-2024" data-title="Ouverture à d'autres moteurs de jeu" data-desc="Application concrète des compétences acquises sous Unity à travers des projets de génération procédurale en 3D, avec l'implémentation d'un système de chunks inspiré de Minecraft. Exploration d'autres moteurs de jeu (Godot, GameMaker, Heaps.io), en gardant un focus constant sur la génération procédurale." data-tech="Unity, Godot, GameMaker, Heaps.io, C#">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2023-2024</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2025-2026" data-title="Développement de moteur maison" data-desc="[TODO] Moteur maison : MonoGame puis C# pur" data-tech="MonoGame, C#">
+                                    <div class="timeline-item" data-year="2025-2026" data-title="Développement d'un moteur de jeu" data-desc="Conception d'un moteur de jeu maison orienté innovation et génération de contenu assistée par IA. Développement progressif d'une architecture sur mesure, d'abord basée sur MonoGame, puis entièrement en C# avec Avalonia utilisée pour le rendu." data-tech="MonoGame, C#, Avalonia">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2025-2026</div>
                                     </div>
@@ -189,31 +189,31 @@
                                     </div>
                                 </div>
                                 <div class="timeline-container" id="timeline-container-en" style="display: none;">
-                                    <div class="timeline-item" data-year="2008" data-title="First steps in game design" data-desc="Early discovery of game design and level design using accessible game creation tools. First experiments with level design and game mechanics." data-tech="FPS Creator, RPG Maker">
+                                    <div class="timeline-item" data-year="2008" data-title="Discovery of game creation" data-desc="Early discovery of game design and level design using accessible game creation tools. First experiments with level design and game mechanics." data-tech="FPS Creator, RPG Maker">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2008</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2015" data-title="Discovery of programming" data-desc="First steps in programming with Minecraft modding in Java and web development (HTML, CSS). Moving beyond ready-made tools to start coding basic game systems: movement, interactions, combat, health points and score." data-tech="GameMaker, Construct 2, Java, HTML, CSS">
+                                    <div class="timeline-item" data-year="2015" data-title="First steps in programming" data-desc="First steps in programming with Minecraft modding in Java and web development (HTML, CSS). Moving beyond ready-made tools to start coding basic game systems: movement, interactions, combat, health points and score." data-tech="GameMaker, Construct 2, Java, HTML, CSS">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2015</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2016-2017" data-title="First games without full engine" data-desc="[TODO] SFML, Phaser — roguelike prototype (Rebirth)" data-tech="SFML, Phaser, C++, SDL, CSFML, C">
+                                    <div class="timeline-item" data-year="2016-2017" data-title="Game development without an engine" data-desc="First complete game developments in C (CSFML), C++ (Irrlicht) and JavaScript (Phaser). Procedural generation with the Rebirth project (inspired by The Binding of Isaac) and first implementations of 2D world chunk management." data-tech="SFML, Phaser, C++, SDL, CSFML, C, Irrlicht">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2016-2017</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2018-2021" data-title="Learning and skill development on Unity" data-desc="[TODO] Procedural generation (terrains, biomes, worlds), Unity prototypes, Devastation in Eden, VFX and visual effects" data-tech="Unity, C#">
+                                    <div class="timeline-item" data-year="2018-2021" data-title="Learning and mastery of Unity" data-desc="Learning Unity through prototypes focused on procedural generation (Perlin noise, Voronoi), creation of worlds and planets at large scale, as well as biome generation and placement.<br><br>Mastery of Unity through the development of complete games in a team, during game jams and at Muddy Crab studio. Specialization in C# scripting, VFX, post-processing and level design." data-tech="Unity, C#">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2018-2021</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2022-2023" data-title="Professionalization on Unity (professional context)" data-desc="[TODO] Unity simulation for Airbus (Sopra Steria), tool design, advanced design patterns, complex architecture" data-tech="Unity, C#">
+                                    <div class="timeline-item" data-year="2022-2023" data-title="Professionalization with Unity" data-desc="Team development of a 3D simulator for Airbus, focused on simulating the A350 MFD and KCCU. Professional Unity mission focused on software architecture, advanced design patterns and structuring of complex projects, with mentoring by a Unity ecosystem engineer." data-tech="Unity, C#">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2022-2023</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2023-2024" data-title="Prototypes in free time (multi-engines)" data-desc="[TODO] 2D/3D procedural generation prototypes on Unity, exploration of Godot and GameMaker" data-tech="Unity, Godot, GameMaker, C#">
+                                    <div class="timeline-item" data-year="2023-2024" data-title="Opening up to other game engines" data-desc="Concrete application of skills acquired in Unity through 3D procedural generation projects, with implementation of a Minecraft-inspired chunk system. Exploration of other game engines (Godot, GameMaker, Heaps.io), with a constant focus on procedural generation." data-tech="Unity, Godot, GameMaker, Heaps.io, C#">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2023-2024</div>
                                     </div>
-                                    <div class="timeline-item" data-year="2025-2026" data-title="Home engine development" data-desc="[TODO] Home engine: MonoGame then pure C#" data-tech="MonoGame, C#">
+                                    <div class="timeline-item" data-year="2025-2026" data-title="Development of a game engine" data-desc="Design of a custom game engine focused on innovation and AI-assisted content generation. Progressive development of a tailor-made architecture, first based on MonoGame, then entirely in C# with Avalonia used for rendering." data-tech="MonoGame, C#, Avalonia">
                                         <div class="timeline-point"></div>
                                         <div class="timeline-label">2025-2026</div>
                                     </div>
